WexGit/Wex_DX/force-app/main/default/objects/AOxCompetitor__c/AOxCompetitor__c.object-meta.xml
<CustomObject>
    <description>Junction object to allow many to many relationship between the two objects. Will also allow users to attribute data i.e. &apos;share of spend&apos; to multiple competitors, for analysis. Account Overview is the primary object.</description>
    <label>AOxCompetitor</label>
    <nameField>
        <displayFormat>AOxC-{0}</displayFormat>
        <label>Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AOxCompetitor</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>