WexGit/Wex_DX/force-app/main/default/objects/AOxCompetitor__c/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <label>Competitor</label>
    <referenceTo>Competitor__c</referenceTo>
    <relationshipLabel>Account Overviews</relationshipLabel>
    <relationshipName>Account_Overview_Competitor</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>