WexGit/Wex_DX/force-app/main/default/objects/AOxCompetitor__c/fields/Competitor_Name__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Name__c</fullName>
    <description>For reports</description>
    <formula>Competitor__r.Name</formula>
    <label>Competitor Name</label>
    <type>Text</type>
</CustomField>