WexGit/Wex_DX/force-app/main/default/objects/AOxCompetitor__c/fields/FEP__c.field-meta.xml
<CustomField>
    <fullName>FEP__c</fullName>
    <label>FEP</label>
    <referenceTo>Virtual_FEP__c</referenceTo>
    <relationshipLabel>Competitor Details</relationshipLabel>
    <relationshipName>Account_Overview_Competitor</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>