WexGit/Wex_DX/force-app/main/default/objects/AOxCompetitor__c/fields/NCED_Entered_Today__c.field-meta.xml
<CustomField>
    <fullName>NCED_Entered_Today__c</fullName>
    <description>For reports - is a valid Next Contract End Date populating the field</description>
    <formula>IF(

AND(
NOT(ISBLANK(Next_Contract_End_Date__c)),
Next_Contract_End_Date__c &gt;= TODAY()
),

1,
null

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NCED Entered &amp; &gt;= Today</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>