WexGit/Wex_DX/force-app/main/default/objects/AOxCompetitor__c/fields/Next_Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Contract_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Next Contract End Date</label>
    <type>Date</type>
</CustomField>