WexGit/Wex_DX/force-app/main/default/objects/AOxCompetitor__c/fields/Of_Addressable_Spend__c.field-meta.xml
<CustomField>
    <fullName>Of_Addressable_Spend__c</fullName>
    <inlineHelpText>The share of the customer&apos;s spend that&apos;s being taken by the competitor</inlineHelpText>
    <label>% Of Addressable Spend</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>