WexGit/Wex_DX/force-app/main/default/objects/AOxCompetitor__c/fields/Value_Of_Spend__c.field-meta.xml
<CustomField>
    <fullName>Value_Of_Spend__c</fullName>
    <formula>Of_Addressable_Spend__c *  FEP__r.Annual_Addressable_Spend__c</formula>
    <label>Value Of Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>